--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <meta charset="utf-8">
 </head>
+
 <body>
+
+  <form id="dasturi">
+    <input type="number">
+    <button type="submit">Submit</button>
+  </form>
+  <script src="bundle.js"></script>
+
   <script src="bundle.js"></script>
 </body>
+
 </html>
